Fix for CaptureArgs

--- a/dist.ini
+++ b/dist.ini
@@ -8,11 +8,15 @@ copyright_year   = 2015
 version = 0.0.1
 
 [@Basic]
+
 [InstallGuide]
 [PodWeaver]
 [PkgVersion]
-[AutoPrereqs]
 [ReadmeFromPod]
+[CPANFile]
+
 [Test::NoTabs]
 [EOLTests]
 [PodSyntaxTests]
+
+[AutoPrereqs]
