--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license = Perl_5
 copyright_holder = Dmitry Latin
 copyright_year   = 2015
 
-version = 0.0.1
+version = 0.0.2
 
 [@Basic]
 
@@ -13,6 +13,7 @@ version = 0.0.1
 [PodWeaver]
 [PkgVersion]
 [ReadmeFromPod]
+[NextRelease]
 [CPANFile]
 
 [Test::NoTabs]
